# MerchShop

./: .dockerfile  .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  wait-for-it.sh
avito/: .env.docker  .env.template  alembic.ini  main.py  prestart.sh
avito/actions/: create_superuser.py
avito/alembic/: env.py
avito/alembic/versions/: 2025_02_12_0004-54552012d8b9_create_tables.py  2025_02_12_1936-93a9e4fcb85e_create_tables.py  2025_02_12_2144-47b490cb4c61_create_all_tables.py  2025_02_12_2303-f9202fa5959d_create_access_tokens_table.py  2025_02_13_2336-4c5663349944_added_email_column_to_users.py  2025_02_14_1255-760cd12a46fb_make_username_field_non_unique.py  2025_02_15_1737-edf171772a67_email_not_unique.py  2025_02_15_2306-b8750c54fa04_email_may_be_null.py  2025_03_06_1831-57e0a1b351d0_add_extend_existing_to_base.py  2025_03_29_1845-59de0e988c1c_init.py
avito/api/: __init__.py
avito/api/api_v1/: __init__.py  auth.py  buy.py  fastapi_users_router.py  info.py  send_coin.py  users.py
avito/api/dependencies/: access_tokens.py  fastapi_users_router.py  strategy.py  user_manager.py
avito/api/dependencies/authentification/: backend.py  strategy.py  user_manager.py
avito/core/: config.py  db_init.py
avito/core/authentication/: transport.py  user_manager.py
avito/core/models/: __init__.py  access_token.py  base.py  db_helper.py  merch.py  purchase.py  requests.py  responses.py  transaction.py  user.py
avito/core/types/: user_id.py
avito/crud/: users.py
avito/schemas/: responses.py  transaction.py  user.py
avito/utils/: __init__.py
tests/: __init__.py
tests/unit/: test_auth.py  test_coins.py  test_merch.py
