[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.8"}
uvicorn = {extras = ["standard"], version = "^0.34.0"}
pydantic = ">=2.0.0"
pydantic-settings = "^2.7.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.38"}
alembic = "^1.14.1"
asyncpg = "^0.30.0"
orjson = "^3.10.15"
black = "^25.1.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^14.0.1"}
argon2-cffi = "^23.1.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

