[tool.poetry]
name = "avito"
version = "0.1.0"
description = "Сервис для внутреннего магазина мерча в Авито"
authors = ["Maria Bondareva <mnikitina2001@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.8"}
uvicorn = {extras = ["standard"], version = "^0.34.0"}
pydantic = ">=2.0.0"
pydantic-settings = "^2.7.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.38"}
alembic = "^1.14.1"
asyncpg = "^0.30.0"
orjson = "^3.10.15"
fastapi-users = {extras = ["sqlalchemy"], version = "^14.0.1"}
argon2-cffi = "^23.1.0"
pytest-cov = "^6.0.0"
passlib = "^1.7.4"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"